--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=learn-jpa-and-hibernate
 spring.h2.console.enabled=true
+
+#H2 ??? url? ?????.
 spring.datasource.url=jdbc:h2:mem:testdb
+
+#??? ??? ???? ??? ? ??.
+spring.jpa.show-sql=true
